# Survive

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/com/kylecorry/trail_sense/: RustBridge.kt
app/src/main/java/com/kylecorry/trail_sense/main/: MainActivity.kt
app/src/main/java/com/kylecorry/trail_sense/shared/camera/: GrayscaleMomentFinder.kt
app/src/main/java/com/kylecorry/trail_sense/shared/extensions/: SolExtensions.kt
app/src/main/java/com/kylecorry/trail_sense/tools/astronomy/ui/: AstronomyFragment.kt
app/src/main/java/com/kylecorry/trail_sense/tools/beacons/ui/: PlaceBeaconFragment.kt
app/src/main/java/com/kylecorry/trail_sense/tools/experimentation/: ExperimentationFragment.kt
app/src/main/java/com/kylecorry/trail_sense/tools/species_catalog/: BuiltInFieldGuide.kt  FieldGuidePageTag.kt
app/src/main/res/raw/: acridomorpha.txt  clam.txt  coleoptera.txt  crab.txt  crayfish.txt  cyprinus.txt  dasyprocta.txt  field_guide_crab.txt  field_guide_grouse.txt  field_guide_squirrel.txt  field_guide_sunfish.txt  formicidae.txt  grylloidea.txt  isoptera.txt  lepomis.txt  leporidae.txt  littorinidae.txt  lumbricina.txt  micropterus.txt  muridae.txt  mussel.txt  periwinkle.txt  sciuridae.txt  tetraonini.txt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
lintchecks/: build.gradle.kts
lintchecks/src/main/java/com/kylecorry/trail_sense/lintchecks/: CustomIssueRegistry.kt  UseMethodRestrictionDetector.kt
rust_module/: Cargo.toml  build.sh
rust_module/src/: lib.rs
scripts/: create-tool.py
(+9 files in other folders)
